k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edc-validation-dashboard
  labels:
    app: edc-validation-dashboard
spec:
  type: ClusterIP
  selector:
    app: edc-validation-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
