k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edc-validation-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edc-validation-dashboard
                port:
                  name: http
